--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
     <a class="link-buttom" target="Blank" href="https://www.facebook.com/sm.jonayet.143">Contact To Me </a>
 
-    <footer>
-        <p>© This Website Make By Sayed Moghammad Jonayet</p>
-    </footer>
+
+
+    <footer>© This Website Make By Sayed Mohammad Jonayet</footer>
 
 </body>
 
